@@ -31,6 +31,7 @@ Fixed segfault error when using breakpoints like peek/opcode in config file
 Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD
 Fixed average cpu statistics when footer is not enabled
 Fixed kempston mouse emulation on Next machine: wheel bits always return 0
+Fixed bug extracting PAWS words when a word is type Pronoun
 
 
 
